--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -79,7 +79,7 @@ body {
   transition: all 0.2s;
   letter-spacing: 0.2rem; }
   .heading-secondary:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    transform: scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .heading-tertiary {
