--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -27,8 +27,8 @@
       &-1 {
         background-image: linear-gradient(
           to right bottom,
-          rgba($color-secondary-light, 0.8),
-          rgba($color-secondary-dark, 0.8)
+          $color-secondary-light,
+          $color-secondary-dark
         );
       }
       &-2 {
@@ -53,12 +53,15 @@
   &:hover &__side--back {
     transform: rotateY(0);
   }
+  // FRONT SIDE STYLING
   &__picture {
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+
     &--1 {
       background-image: linear-gradient(
           to right bottom,
@@ -68,10 +71,20 @@
         url(../../img/nat-5.jpg);
     }
     &--2 {
-      background-image: url(../../img/nat-5.jpg);
+      background-image: linear-gradient(
+          to right bottom,
+          rgba($color-primary-light, 0.8),
+          rgba($color-primary-dark, 0.8)
+        ),
+        url(../../img/nat-6.jpg);
     }
     &--3 {
-      background-image: url(../../img/nat-5.jpg);
+      background-image: linear-gradient(
+          to right bottom,
+          rgba($color-tertiary-light, 0.8),
+          rgba($color-tertiary-dark, 0.8)
+        ),
+        url(../../img/nat-7.jpg);
     }
   }
   &__heading {
@@ -91,15 +104,24 @@
     box-decoration-break: clone;
     &--1 {
       background-image: linear-gradient(
-          to right bottom,
-          rgba($color-secondary-light, 0.8),
-          rgba($color-secondary-dark, 0.8)
-        ),
-        url(../../img/nat-5.jpg);
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
     }
     &--2 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.85),
+        rgba($color-primary-dark, 0.85)
+      );
     }
     &--3 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-tertiary-light, 0.85),
+        rgba($color-tertiary-dark, 0.85)
+      );
     }
   }
   &__details {
@@ -117,5 +139,30 @@
         }
       }
     }
+  }
+  // BACK SIDE STYLING
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
+  }
+
+  &__price-box {
+    text-align: center;
+    color: $color-white;
+    margin-bottom: 8rem;
+  }
+  &__price-only {
+    font-size: 1.4rem;
+
+    text-transform: uppercase;
+  }
+
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 100;
   }
 }
